apex-libraries/sfdx-source/at4dx/main/schema/objects/PlatformEvents_Subscription__mdt/PlatformEvents_Subscription__mdt.object-meta.xml
<CustomObject>
    <description>Maintains the list of Platform-Event consumers.</description>
    <label>Platform Events - Subscription</label>
    <pluralLabel>Platform Events - Subscriptions</pluralLabel>
</CustomObject>