apex-libraries/sfdx-source/at4dx/main/schema/objects/PlatformEvents_Subscription__mdt/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description
    >The name of a specific event that the consumer wants to receive.  Example: &quot;UserCreation&quot;.</description>
    <inlineHelpText
    >The name of a specific event that the consumer wants to receive.  Example: &quot;UserCreation&quot;.</inlineHelpText>
    <label>Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>