apex-libraries/sfdx-source/at4dx/main/schema/objects/PlatformEvents_Subscription__mdt/fields/Execute_Synchronous__c.field-meta.xml
<CustomField>
    <fullName>Execute_Synchronous__c</fullName>
    <defaultValue>false</defaultValue>
    <description
    >When checked, the Platform Event dynamic subscription will be executed within the same process as the trigger. When unchecked, the subscribed object will be executed as a Queueable.</description>
    <inlineHelpText
    >When checked, the Platform Event dynamic subscription will be executed within the same process as the trigger. When unchecked, the subscribed object will be executed as a Queueable.</inlineHelpText>
    <label>Execute Synchronous</label>
    <type>Checkbox</type>
</CustomField>