apex-libraries/sfdx-source/at4dx/main/schema/objects/PlatformEvents_Subscription__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description
    >If checked, then this subscription is active and an event matching this description will be distributed to the consumer specified.</description>
    <inlineHelpText
    >If checked, then this subscription is active and an event matching this description will be distributed to the consumer specified.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>