apex-libraries/sfdx-source/at4dx/main/schema/objects/PlatformEvents_Subscription__mdt/fields/MatcherRule__c.field-meta.xml
<CustomField>
    <fullName>MatcherRule__c</fullName>
    <description
    >This determines which fields must match the event in order for it to be distributed to the consumer.</description>
    <inlineHelpText
    >This determines which fields must match the event in order for it to be distributed to the consumer.</inlineHelpText>
    <label>Matcher Rule</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MatchEventBusAndCategoryAndEventName</fullName>
                <default>true</default>
                <label>Match Event Bus and Category and Event Name</label>
            </value>
            <value>
                <fullName>MatchEventBusAndCategory</fullName>
                <label>Match Event Bus and Category</label>
            </value>
            <value>
                <fullName>MatchEventBusAndEventName</fullName>
                <label>Match Event Bus and Event Name</label>
            </value>
            <value>
                <fullName>MatchEventBus</fullName>
                <label>Match Event Bus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>